<resources>
    <string name="app_name">简约记账</string>
    <string name="editone">记一笔</string>
    <string name="in">收入</string>
    <string name="out">支出</string>
    <string name="month_in">本月收入</string>
    <string name="month_out">本月支出</string>
    <string name="budget">预算剩余</string>
    <string name="set_budget">设置预算</string>
    <string name="see_excel">查看图表分析</string>
    <string name="remark">备注</string>
    <string name="add_remark">添加备注</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="account_history_record">账单记录</string>
    <string name="account_info">账单详情</string>
    <string name="please_input_time">请输入时间(24小时制)</string>
    <string name="please_input_search_info">请输入搜索信息</string>
    <string name="data_empty">数据为空，无此类记录</string>

    <!--  关于页面中的信息  -->
    <string name="about_app_info">应用信息</string>
    <string name="about_version">版本号</string>
    <string name="about_1">1.0</string>
    <string name="about_app">关于应用</string>
    <string name="about_app_content">该项目包括了Activity，Fragment，数据库，Adapter，对话框等知识点</string>
    <string name="about_developer">开发者</string>
    <string name="about_me">关于我</string>
    <string name="about_loc">坐标青岛，Android程序员，座右铭: 没有思考就不属于真实的活着</string>
    <string name="about_call_me">联系我</string>
    <string name="about_my_email">我的邮箱是: 2xxxxxx@qq.com</string>
    <string name="about_my_phone">我的电话是: 137xxxxxxxx(微信同号)</string>
    <string name="about_code">源代码</string>
    <string name="about_code_info">我的代码托管在github，地址链接为: https://github.com/hejing-admin/，欢迎一起交流学习</string>

    <!--  历史记录页面中的信息  -->
    <string name="history_info">本月账单记录</string>
    <string name="clear_all_record">清空所有记录</string>

    <!--  绘制图形相关  -->
    <string name="chart_info">账单详情</string>
    <string name="no_data">暂无数据</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>














