<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_f3f3f3">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/chart_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/it_back"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/chart_info"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/chart_iv_calendar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/it_rili"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/chart_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2023年10月账单"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/chart_tv_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="共1笔支出，￥33.0"
            android:textSize="15sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/chart_tv_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="共2笔收入，￥113.0"
            android:textSize="15sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">
        <Button
            android:id="@+id/chart_btn_out"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/out"
            android:background="@drawable/main_recordbtn_bg"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/chart_btn_in"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/in"
            android:background="@drawable/dialog_btn_bg"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
    <!--  ViewPager中嵌套两个fragment，一个是支出页面，一个是收入页面  -->
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/chart_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>






















